done with swithing theme with a button

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en" dir="ltr" class="dark"><!---This helps programmer to work styles in darkMode manually in the browser-->
+<html lang="en" dir="ltr" ><!--- class="dark" This helps programmer to work styles in darkMode manually in the browser-->
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Getting started with tailwindcss</title>
   </head>
-  <body>
+  <body className="dark"> <!--Set className="dark" when working with a theme switcher-->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
