--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Getting started with tailwindcss</title>
   </head>
-  <body className="dark"> <!--Set className="dark" when working with a theme switcher-->
+  <body className="dark"> <!--Set className="dark" when working with a theme switcher(button)-->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
